--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,11 +1,10 @@
 doctype html
 html
     head
+        link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.6.1/css/all.css", integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP", crossorigin="anonymous")
         title WeTube
     body
-        header
-            h1 WeTube
+        include ../partials/header
         main
             block content
-        footer
-            span &copy; WeTube
+        include ../partials/footer
