--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -2,4 +2,11 @@ extends layouts/main
 include mixins/videoBlock
 
 block content
-    p Video Detail
+    .video__player
+        video(src=`/${video.fileUrl}`)
+    .video__info
+        a(href=routes.editVideo) Edit video
+        h5.video__title=video.title
+        span.video__views=video.views
+        p.video__description=video.description
+        
